tests/baselines/reference/objectLiteralWithSemicolons4.errors.txt
tests/cases/compiler/objectLiteralWithSemicolons4.ts(2,3): error TS18004: No value exists in scope for the shorthand property 'a'. Either declare one or provide an initializer.
tests/cases/compiler/objectLiteralWithSemicolons4.ts(3,1): error TS1005: ',' expected.


==== tests/cases/compiler/objectLiteralWithSemicolons4.ts (2 errors) ====
    var v = {
      a
      ~
!!! error TS18004: No value exists in scope for the shorthand property 'a'. Either declare one or provide an initializer.
    ;
    ~
!!! error TS1005: ',' expected.
!!! related TS1007 tests/cases/compiler/objectLiteralWithSemicolons4.ts:1:9: The parser expected to find a '}' to match the '{' token here.